# arduino_ros2_communicate

./: README.md  platformio.ini  ros2控制舵机.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/arduino_communication/lib/arduino_communication/: arduino_serial_node
ros2_ws/install/arduino_communication/share/ament_index/resource_index/package_run_dependencies/: arduino_communication
ros2_ws/install/arduino_communication/share/ament_index/resource_index/parent_prefix_path/: arduino_communication
ros2_ws/install/arduino_communication/share/arduino_communication/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/arduino_communication/share/arduino_communication/cmake/: arduino_communicationConfig-version.cmake  arduino_communicationConfig.cmake
ros2_ws/install/arduino_communication/share/arduino_communication/environment/: ament_prefix_path.dsv  path.dsv
ros2_ws/log/: latest_build
ros2_ws/src/arduino_communication/: CMakeLists.txt
ros2_ws/src/arduino_communication/src/: arduino_serial_node.cpp
src/: main.cpp
